tests/match-02/out.txt
error: non-exhaustive match
  ┌─ err.sml:2:8
  │
2 │   case (1, 2) of
  │        ^^^^^^

typechecking failed
